set up custom css format

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,12 @@ code {
     monospace;
 }
 
+.page-title {
+  font-size: 5rem;
+text-align: center;
+color: blue
+}
+
 /* rescue css */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap");
 *,
